@@ -2120,6 +2120,7 @@ nuttx-5.19 2011-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	  the internals of the memory manager as does mm/mm_test.c, but it has the
 	  advantage that it runs in the actual NuttX tasking environment (the
 	  mm/mm_test.c only runs in a PC simulation environment).
+    * drivers/mmcsd_sdio.c/h -- Several corrections submitted by Uros Platise.
 
 pascal-2.1 2011-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
